# sleeper-helper

./: .gitignore  Cargo.toml  LICENSE  README.md
jscraper/: README.md  pom.xml
scraper/: Cargo.toml  README.md  pom.xml
scraper/src/: fantasypros.rs  main.rs  sleeper.rs
scraper/src/main/java/com/albersm/sleeperhelper/: Scraper.java
scraper/src/main/java/com/albersm/sleeperhelper/fantasypros/: FantasyPros.java
scraper/src/main/java/com/albersm/sleeperhelper/fantasypros/model/: PlayerRank.java  PlayerRankings.java  Rankings.java
scraper/src/main/java/com/albersm/sleeperhelper/model/: Cap.java  Metadata.java  Player.java  Season.java  Team.java
scraper/src/main/java/com/albersm/sleeperhelper/sleeper/: Sleeper.java
scraper/src/main/java/com/albersm/sleeperhelper/sleeper/model/: CalculatedGameStats.java  Data.java  GameStats.java  Initialize.java  InitializeData.java  InnerData.java  InnerMetadata.java  Metadata.java  PlayerDetails.java  PlayerIds.java  Roster.java  SleeperLeaguePlayer.java  SleeperLeagueUser.java  SleeperPlayerStats.java
scraper/src/main/java/com/albersm/sleeperhelper/util/: CacheableRequest.java  HttpUtils.java  ThrottlingCacheableRequest.java
scraper/src/test/java/com/albersm/sleeperhelper/: ScraperTest.java
src/: errors.rs  fantasypros.rs  main.rs  model.rs  sleeper.rs
website/: README.md  index.html  keeper_data.json  package.json  pnpm-lock.yaml  script.js  style.css  tsconfig.json  webpack-config-react.js  webpack.common.js  webpack.config.js
website/src/: index.js  index.ts  index.tsx  index_react.html  index_react.tsx  (+2 more)
(+33 files in other folders)
