[package]
authors = ["Michael Albers"]
edition = "2021"
license = "MIT"
name = "sleeper-helper"
rust-version = "1.69"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.18", features = ["blocking"]}
serde = {version = "1.0.163", features = ["derive"]}
serde_json = "1.0.96"
